syntax = "proto3";
package dongle.speech;
option go_package = "github.com/kimsehyoung/dongle/api/proto/gen/go/speech";

import "google/api/annotations.proto";

// ### STT ###
message RecognizeRequest {
    string language = 1;
    bytes audio = 2;
}
message RecognizeResponse {
    string text = 1;
}
// ### TTS ###
message SynthesizeRequest {
    string language = 1;
    string text = 2;
}
message SynthesizeResponse {
    bytes audio = 1;
}


service Speech {
    // ### STT ###
	rpc Recognize(RecognizeRequest) returns (RecognizeResponse) {
        option (google.api.http) = {
			post : "/speech/recognize"
			body : "*"
		};
	};
    // ### TTS ###
    rpc Synthesize(SynthesizeRequest) returns (SynthesizeResponse) {
		option (google.api.http) = {
			post : "/text/synthesize"
			body : "*"
		};
	};
}